Bug fixes
+ Updated main.js to ensure the dot associated with the slide was
   active and that the other dots remained inactive if their respective
   slide was not showing.

+ Updated the main.css to make sure the .number-text and the .text
   (caption)  so it didn't change to an I-cursor when hovered over

--- a/basic_javascript_projects/project9_countdown_slideshow/Slideshow_Assignment/CSS/main.css
+++ b/basic_javascript_projects/project9_countdown_slideshow/Slideshow_Assignment/CSS/main.css
@@ -33,6 +33,7 @@
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
     user-select: none;
+    cursor: pointer;
 }
 
 /* Position the "next button" to the right */
@@ -56,6 +57,7 @@
     bottom: 14px;
     width: 100%;
     text-align: center;
+    cursor: default;
 }
 
 /* Number text (1/3 etc) */
@@ -66,6 +68,7 @@
     padding: 8px 12px;
     position: absolute;
     top: 0;
+    cursor: default;
 }
 
 /* The dots/bullets/indicators */
